# tennis-scorigami

./: .env.example  .gitignore  .lintstagedrc.js  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  commitlint.config.js  components.json  eslint.config.mjs  example.json  force-graph-enhanced.css  improved-force-graph.tsx  instrumentation-client.ts  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  prettier.config.js  shadcn.config.json  tailwind.config.ts  tsconfig.json
.claude/: settings.json  settings.local.json
.github/workflows/: test.yml
.husky/: commit-msg
backend/: README.md
e2e/: homepage.spec.ts
public/: robots.txt  western-and-southern2.avif
public/unfurls/: README.md
scripts/: capture-animations.js  generate-static-fallbacks.js
scripts/batch-ingestion/: .sr-tennis-openapi.json.swp  README.md  pyproject.toml  sr-tennis-openapi.yaml  tennis-config.yaml
scripts/batch-ingestion/data_pipeline/: config.py  db_model.py  key_generators.py  load_countries.py  load_data_from_sportradar.py  load_players.py  main.py  supa.py
scripts/batch-ingestion/data_pipeline/api_wrappers/pinnacle/: api.py  model.py
scripts/batch-ingestion/data_pipeline/api_wrappers/sportradar/: api.py
scripts/batch-ingestion/data_pipeline/api_wrappers/sports_score/: api.py  constants.py  model.py  util.py
scripts/batch-ingestion/data_pipeline/api_wrappers/tennis_api/: api.py
scripts/batch-ingestion/my_custom_templates/openapi_python_client/: endpoint_module.py.jinja
scripts/batch-ingestion/sportradar-tennis-v3/: README.md  pyproject.toml
scripts/permutation-analysis/: .gitignore  README.md  mypy.ini  pyproject.toml
scripts/permutation-analysis/permutation_analysis/: config.py  constants.py  main.py  match_processor.py  perm_generator.py  shared_types.py  supa_raw_client.py
src/: api-utils.ts  constants.ts
src/__tests__/__mocks__/: ParticleCanvas.tsx
src/__tests__/api/: graph.test.ts  matches.test.ts  search.test.ts
src/__tests__/helpers/: request.ts
src/__tests__/lib/: errors.test.ts  scoring.test.ts  search-context.test.ts  search-mapper.test.ts  search-parser.test.ts  utils.test.ts
src/__tests__/utils/: filter-converters.test.ts
src/app/: error.tsx  globals.css  layout.tsx  metadata.ts  not-found.tsx  page.tsx  sitemap.ts
src/app/about/: error.tsx  layout.tsx  page.tsx
src/app/explore/: error.tsx  explore-page-content.tsx  layout.tsx  page.tsx
src/app/search/: error.tsx  layout.tsx  page.tsx
src/app/theory/: error.tsx  layout.tsx  page.tsx
src/app/unfurl/: page.tsx
src/archived/: EnhancedSetScoreVisualization.tsx  ScorigamiTreeVisualizationCore.tsx  ScorigamiTreeVisualizationV1.tsx
src/components/: EnhancedSetScoreVisualization.tsx  ScorigamiTreeVisualization.tsx  ThemeToggle.tsx  header.tsx  improved-select.tsx  scoreboard.tsx  scorigami-tree-viz.tsx  theme-toggle.tsx  view-type-selector.tsx
src/components/about/: call-to-action.tsx  data-collection.tsx  feature-card.tsx  feedback-section.tsx  hero-section.tsx  project-overview.tsx  section.tsx  team-member-card.tsx  team-section.tsx  tech-card.tsx  technology-stack.tsx
src/constants/: graph-colors.ts
src/db/: index.ts
src/lib/: api-client.ts  errors.ts  types.ts
src/providers/: graph-provider.tsx  index.tsx
src/services/: api-utils.ts
src/store/: scoreigami.ts  tournament.ts
src/stories/: ParticleCanvas.stories.tsx
src/styles/: flap-styles.css  globals.css  index.ts  select.css
src/supabase/: client.ts  config.toml  database.types.ts
src/types/: 3d-force-graph.d.ts  env.d.ts  initial-score.ts  set-score.ts  tennis-match.ts  tournament.ts  tree-control-types.ts  tree-node.ts
src/utils/: filter-converters.ts  graph-utils.ts
supabase/: 00001-create-table-script.sql  00002-get-aggregated-matches.sql  00003-get-initial-scores.sql  00004-match-perm-tables.sql
(+146 files in other folders)
